--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,50 @@
 {% extends 'main.html'%} {% block content %}
 
-<div>
-    <a href="{% url 'create_room' %}">Create rooom</a>
-  {% for room in rooms %}
-  <div>
-    <span>@{{ room.host.username }}</span>
+<style>
+  .home-container {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+  }
+</style>
 
-    <h5>{{ room.id }} -- <a href="/room/{{ room.id }}"> {{ room.name }}</a></h5>
-    <small>{{ room.topic.title }}</small>
+<div class="home-container">
+  <div>
+    <p>Browse Topics</p>
     <hr />
+    <a href="{% url 'home' %}">All</a>
+
+    {% for topic in topics %}
+    <div>
+      <a href="{% url 'home' %}?query={{ topic.title }} ">{{ topic.title }}</a>
+    </div>
+    {% endfor %}
   </div>
-  {% endfor %}
+
+  <div>
+    {% if room_count == 0 %}
+    <h5>No rooms available</h5>
+    {% else %}
+    <h5>{{ room_count }} room(s) available</h5>
+    {% endif %}
+    <a href="{% url 'create_room' %}">Create rooom</a>
+    {% for room in rooms %}
+    <div>
+      <!-- #Hiding delete and edit links form non room owners -->
+
+      {% if request.user == room.host %}
+      <a href="{% url 'update_room' room.id %}">Edit</a> <br />
+      <a href="{% url 'delete_room' room.id %}">Delete</a><br />
+      {% endif %}
+
+      <span>@{{ room.host.username }}</span>
+
+      <h5>
+        {{ room.id }} -- <a href="{% url 'room' room.id %}"> {{ room.name }}</a>
+      </h5>
+      <small>{{ room.topic.title }}</small>
+      <hr />
+    </div>
+    {% endfor %}
+  </div>
 </div>
 {% endblock%}
