--- a/templates/main.html
+++ b/templates/main.html
@@ -10,6 +10,14 @@
     <title>study buddy</title>
   </head>
   <body>
-    {% include 'navbar.html' %} {% block content%} {% endblock %}
+    {% include 'navbar.html' %}
+    {% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <li>{{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %}
+    {% block content%} {% endblock %}
   </body>
 </html>
