--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,2 +1,14 @@
 <h1><a href="#"> Logo </a></h1>
+
+<form method="get" action="{% url 'home'%}">
+    <input type="text" name="query"  placeholder="Search for a Room..."/>
+
+</form>
+{% if request.user.is_authenticated %}
+<a href="{% url 'logout_user' %}">Logout</a>
+{% else %}
+<a href="{% url 'login' %}">Login</a>
+{% endif %}
+
 <hr />
+
