--- a/templates/room.html
+++ b/templates/room.html
@@ -1,6 +1,6 @@
 {%extends 'main.html' %} {% block content%}
-{% for room in rooms %}
-<h3>{{ room.name }}</h3>
-{% endfor %}
+
+<h3>{{ rooms.name }}</h3>
+
 
 {% endblock %}
