--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,6 +5,7 @@
 
 </form>
 {% if request.user.is_authenticated %}
+<p>Hello {{ request.user }}</p>
 <a href="{% url 'logout_user' %}">Logout</a>
 {% else %}
 <a href="{% url 'login' %}">Login</a>
