--- a/templates/main.html
+++ b/templates/main.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="{% static 'css/bootstrap.min.css' %}" >  
-    <script src="{% static 'bootstrap.min.js' %}"></script>  
-    <title>study buddy</title>
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
+    <!-- <link rel="stylesheet" href="style.css" /> -->
+    <link rel="stylesheet" type="text/css" media="screen" href="{% static 'styles/style.css' %}">
+    <title>StudyBuddy - Find study partners around the world!</title>
   </head>
+
   <body>
     {% include 'navbar.html' %}
     {% if messages %}
@@ -19,5 +21,10 @@
 </ul>
 {% endif %}
     {% block content%} {% endblock %}
+   
+    <!-- <script src="script.js"></script> -->
   </body>
 </html>
+
+
+
