--- a/templates/activity.html
+++ b/templates/activity.html
@@ -1,14 +1,87 @@
-<h3>Recent activity</h3>
-{% for room_message in room_messages %}
-<div>
- <small><a href="{% url 'user-profile' room_message.user.id %}"><i>@{{ room_message.user }} </i></a> &nbsp; Posted {{ room_message.created_at|timesince }} ago</small>
- <p>Replied to " <a href="{% url 'room' room_message.id %}"><span<strong>{{ room_message.room }}</strong> </span>  </a>" </p>
- <p>{{ room_message }}</p>
 
- {% if request.user == room_message.user %}
- <a href="{% url 'delete_message' room_message.id %}">Delete</a>
- <a href="{% url 'edit_message' room_message.id %}">Edit</a>
- {% endif %}
-</div>
-<hr>
-{% endfor %}
+    <main class="layout">
+      <div class="container">
+        <div class="layout__box">
+          <div class="layout__boxHeader">
+            <div class="layout__boxTitle">
+              <a href="{% url 'home' %}">
+                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                  <title>arrow-left</title>
+                  <path
+                    d="M13.723 2.286l-13.723 13.714 13.719 13.714 1.616-1.611-10.96-10.96h27.625v-2.286h-27.625l10.965-10.965-1.616-1.607z"
+                  ></path>
+                </svg>
+              </a>
+              <h3>Recent Actooivities</h3>
+            </div>
+            
+          </div>
+          {% for room_message in room_messages %}
+          <div class="activities-page layout__body">
+            <div class="activities__box">
+              <div class="activities__boxHeader roomListRoom__header">
+                <a href="{% url 'user-profile' room_message.user.id %}" class="roomListRoom__author">
+                  <div class="avatar avatar--small">
+                    <img src="https://randomuser.me/api/portraits/women/11.jpg" />
+                  </div>
+                  <p>
+                    @{{ room_message.user.username}}
+                    <span>{{ room_message.created_at|timesince }} ago</span>
+                  </p>
+                </a>
+                <div class="roomListRoom__actions">
+                  <a href="{% url 'delete_message' room_message.id %}">
+                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                      <title>remove</title>
+                      <path
+                        d="M27.314 6.019l-1.333-1.333-9.98 9.981-9.981-9.981-1.333 1.333 9.981 9.981-9.981 9.98 1.333 1.333 9.981-9.98 9.98 9.98 1.333-1.333-9.98-9.98 9.98-9.981z"
+                      ></path>
+                    </svg>
+                  </a>
+                </div>
+              </div>
+              <div class="activities__boxContent">
+                <p>replied to post “<a href="room.html">100 Days of code challenge!</a>”</p>
+                <div class="activities__boxRoomContent">
+                  I’ll have to try this sometime. Really like this idea. Wanna talk about it? I ‘m....
+                </div>
+              </div>
+            </div>
+
+            <div class="activities__box">
+              <div class="activities__boxHeader roomListRoom__header">
+                <a href="profile.html" class="roomListRoom__author">
+                  <div class="avatar avatar--small active">
+                    <img src="https://randomuser.me/api/portraits/men/13.jpg" />
+                  </div>
+                  <p>
+                    @mr_spshuvo
+                    <span>5 days ago</span>
+                  </p>
+                </a>
+                <div class="roomListRoom__actions">
+                  <a href="#">
+                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                      <title>remove</title>
+                      <path
+                        d="M27.314 6.019l-1.333-1.333-9.98 9.981-9.981-9.981-1.333 1.333 9.981 9.981-9.981 9.98 1.333 1.333 9.981-9.98 9.98 9.98 1.333-1.333-9.98-9.98 9.98-9.981z"
+                      ></path>
+                    </svg>
+                  </a>
+                </div>
+              </div>
+              <div class="activities__boxContent">
+                <p>replied to post “<a href="room.html">100 Days of code challenge!</a>”</p>
+                <div class="activities__boxRoomContent">
+                  I’ll have to try this sometime. Really like this idea. Wanna talk about it? I ‘m....
+                </div>
+              </div>
+            </div>
+          </div>
+          {% endfor %}
+        </div>
+      </div>
+    </main>
+
+    <!-- <script src="script.js"></script> -->
+
