--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
-{% include 'main.html' %}
+{% extends 'main.html' %}
+{% load static %}
 {% block content %}
     <main class="layout layout--3">
       <div class="container">
@@ -7,7 +8,8 @@
           <div class="topics__header">
             <h2>Browse Topics</h2>
           </div>
-          <ul class="topics__list">
+          {% include 'topic-component.html' %}
+          <!-- <ul class="topics__list">
             <li>
               <a href="/" class="active">All <span>553</span></a>
             </li>
@@ -23,14 +25,14 @@
             <li>
               <a href="/">Database <span>90</span></a>
             </li>
-          </ul>
-          <a class="btn btn--link" href="topics.html">
+          </ul> -->
+          <!-- <a class="btn btn--link" href="topics.html">
             More
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
               <title>chevron-down</title>
               <path d="M16 21l-13-13h-3l16 16 16-16h-3l-13 13z"></path>
             </svg>
-          </a>
+          </a> -->
         </div>
         <!-- Topics End -->
 
@@ -53,12 +55,18 @@
               <a class="btn btn--main btn--pill" href="#">Recent Activities</a>
             </div>
           </div>
+          {% if room_count == 0 %}
+<p>You are not subcribed to any room!!</p>
+<a href = "{% url 'create_room' %}">Create own</a> or <a href="#">Join one</a>
+{% endif %}
+  
           <div class="roomList__header">
             <div>
               <h2>Study Room</h2>
-              <p>7,439 Rooms available</p>
+              <p>{{ room_count }} Rooms available</p>
             </div>
-            <a class="btn btn--main" href="create-room.html">
+            
+            <a class="btn btn--main" href="{% url 'create_room' %}">
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
                 <title>add</title>
                 <path
@@ -68,23 +76,23 @@
               Create Room
             </a>
           </div>
+          {% for room in rooms %}
           <div class="roomListRoom">
             <div class="roomListRoom__header">
-              <a href="profile.html" class="roomListRoom__author">
+              <a href="{% url 'user-profile' room.host.id  %}" class="roomListRoom__author">
                 <div class="avatar avatar--small">
                   <img src="https://randomuser.me/api/portraits/women/11.jpg" />
                 </div>
-                <span>@sulamita_ivy</span>
+                <span>@{{ room.host.username }}</span>
               </a>
               <div class="roomListRoom__actions">
-                <span>5 days ago</span>
+                <span>{{ room.created_at|timesince }}</span>
               </div>
             </div>
             <div class="roomListRoom__content">
-              <a href="room.html">JavaScript made Simple</a>
+              <a href="{% url 'room' room.id %}">{{ room.name }}</a>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur ducimus harum dolorem, obcaecati
-                mollitia omnis quasi aut consequuntur enim itaque labore.
+                {{ room.description }}
               </p>
             </div>
             <div class="roomListRoom__meta">
@@ -106,50 +114,10 @@
                 </svg>
                 5.3k Joined
               </a>
-              <p class="roomListRoom__topic">Python</p>
+              <p class="roomListRoom__topic">{{ room.topic.title }}</p>
             </div>
           </div>
-          <div class="roomListRoom">
-            <div class="roomListRoom__header">
-              <a href="profile.html" class="roomListRoom__author">
-                <div class="avatar avatar--small active">
-                  <img src="https://randomuser.me/api/portraits/men/11.jpg" />
-                </div>
-                <span>@dennis_ivy</span>
-              </a>
-              <div class="roomListRoom__actions">
-                <span>3 days ago</span>
-              </div>
-            </div>
-            <div class="roomListRoom__content">
-              <a href="room.html">100 Days of coding challenge</a>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur ducimus harum dolorem, obcaecati
-                mollitia omnis quasi aut consequuntur enim itaque labore.
-              </p>
-            </div>
-            <div class="roomListRoom__meta">
-              <a class="roomListRoom__joined">
-                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
-                  <title>user-group</title>
-                  <path
-                    d="M30.539 20.766c-2.69-1.547-5.75-2.427-8.92-2.662 0.649 0.291 1.303 0.575 1.918 0.928 0.715 0.412 1.288 1.005 1.71 1.694 1.507 0.419 2.956 1.003 4.298 1.774 0.281 0.162 0.456 0.487 0.456 0.85v4.65h-4v2h5c0.553 0 1-0.447 1-1v-5.65c0-1.077-0.56-2.067-1.461-2.584z"
-                  ></path>
-                  <path
-                    d="M22.539 20.766c-6.295-3.619-14.783-3.619-21.078 0-0.901 0.519-1.461 1.508-1.461 2.584v5.65c0 0.553 0.447 1 1 1h22c0.553 0 1-0.447 1-1v-5.651c0-1.075-0.56-2.064-1.461-2.583zM22 28h-20v-4.65c0-0.362 0.175-0.688 0.457-0.85 5.691-3.271 13.394-3.271 19.086 0 0.282 0.162 0.457 0.487 0.457 0.849v4.651z"
-                  ></path>
-                  <path
-                    d="M19.502 4.047c0.166-0.017 0.33-0.047 0.498-0.047 2.757 0 5 2.243 5 5s-2.243 5-5 5c-0.168 0-0.332-0.030-0.498-0.047-0.424 0.641-0.944 1.204-1.513 1.716 0.651 0.201 1.323 0.331 2.011 0.331 3.859 0 7-3.141 7-7s-3.141-7-7-7c-0.688 0-1.36 0.131-2.011 0.331 0.57 0.512 1.089 1.075 1.513 1.716z"
-                  ></path>
-                  <path
-                    d="M12 16c3.859 0 7-3.141 7-7s-3.141-7-7-7c-3.859 0-7 3.141-7 7s3.141 7 7 7zM12 4c2.757 0 5 2.243 5 5s-2.243 5-5 5-5-2.243-5-5c0-2.757 2.243-5 5-5z"
-                  ></path>
-                </svg>
-                5.3k Joined
-              </a>
-              <p class="roomListRoom__topic">Python</p>
-            </div>
-          </div>
+          {% endfor %}
         </div>
         <!-- Room List End -->
 
@@ -158,6 +126,7 @@
           <div class="activities__header">
             <h2>Recent Activities</h2>
           </div>
+          {% for room_message in room_messages %}
           <div class="activities__box">
             <div class="activities__boxHeader roomListRoom__header">
               <a href="profile.html" class="roomListRoom__author">
@@ -165,12 +134,13 @@
                   <img src="https://randomuser.me/api/portraits/women/11.jpg" />
                 </div>
                 <p>
-                  @sulamita_ivy
-                  <span>5 days ago</span>
+                  @{{ room_message.user.username}}
+                  <span>{{  room_message.created_at|timesince  }} ago</span>
                 </p>
               </a>
+              {% if request.user == room_message.user %}
               <div class="roomListRoom__actions">
-                <a href="#">
+                <a href="{% url 'delete_message' room_message.id %}">
                   <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
                     <title>remove</title>
                     <path
@@ -178,47 +148,46 @@
                     ></path>
                   </svg>
                 </a>
-              </div>
-            </div>
-            <div class="activities__boxContent">
-              <p>replied to post “<a href="room.html">100 Days of code challenge!</a>”</p>
-              <div class="activities__boxRoomContent">
-                I’ll have to try this sometime. Really like this idea. Wanna talk about it? I ‘m....
-              </div>
-            </div>
-          </div>
-
-          <div class="activities__box">
-            <div class="activities__boxHeader roomListRoom__header">
-              <a href="profile.html" class="roomListRoom__author">
-                <div class="avatar avatar--small active">
-                  <img src="https://randomuser.me/api/portraits/men/13.jpg" />
-                </div>
-                <p>
-                  @mr_spshuvo
-                  <span>5 days ago</span>
-                </p>
+                <a href="{% url 'edit_message' room_message.user.id %}">            
+                  <svg
+                  enable-background="new 0 0 24 24"
+                  height="32"
+                  viewBox="0 0 24 24"
+                  width="32"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <title>edit</title>
+                  <g>
+                    <path d="m23.5 22h-15c-.276 0-.5-.224-.5-.5s.224-.5.5-.5h15c.276 0 .5.224.5.5s-.224.5-.5.5z" />
+                  </g>
+                  <g>
+                    <g>
+                      <path
+                        d="m2.5 22c-.131 0-.259-.052-.354-.146-.123-.123-.173-.3-.133-.468l1.09-4.625c.021-.09.067-.173.133-.239l14.143-14.143c.565-.566 1.554-.566 2.121 0l2.121 2.121c.283.283.439.66.439 1.061s-.156.778-.439 1.061l-14.142 14.141c-.065.066-.148.112-.239.133l-4.625 1.09c-.038.01-.077.014-.115.014zm1.544-4.873-.872 3.7 3.7-.872 14.042-14.041c.095-.095.146-.22.146-.354 0-.133-.052-.259-.146-.354l-2.121-2.121c-.19-.189-.518-.189-.707 0zm3.081 3.283h.01z"
+                      />
+                    </g>
+                    <g>
+                      <path
+                        d="m17.889 10.146c-.128 0-.256-.049-.354-.146l-3.535-3.536c-.195-.195-.195-.512 0-.707s.512-.195.707 0l3.536 3.536c.195.195.195.512 0 .707-.098.098-.226.146-.354.146z"
+                      />
+                    </g>
+                  </g>
+                </svg>
               </a>
-              <div class="roomListRoom__actions">
-                <a href="#">
-                  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
-                    <title>remove</title>
-                    <path
-                      d="M27.314 6.019l-1.333-1.333-9.98 9.981-9.981-9.981-1.333 1.333 9.981 9.981-9.981 9.98 1.333 1.333 9.981-9.98 9.98 9.98 1.333-1.333-9.98-9.98 9.98-9.981z"
-                    ></path>
-                  </svg>
-                </a>
               </div>
+              {% endif %}
             </div>
             <div class="activities__boxContent">
-              <p>replied to post “<a href="room.html">100 Days of code challenge!</a>”</p>
+              <p>replied to post “<a href="{% url 'room' room_message.id %}">{{ room_message.room }}</a>”</p>
               <div class="activities__boxRoomContent">
-                I’ll have to try this sometime. Really like this idea. Wanna talk about it? I ‘m....
+                {{ room_message }}
               </div>
             </div>
           </div>
+         {% endfor %}
         </div>
         <!-- Activities End -->
       </div>
     </main>
- {% endblock content%}
+    <script src="{% static 'js/script.js' %}"></script>
+{% endblock content %}
