--- a/templates/main.html
+++ b/templates/main.html
@@ -22,7 +22,7 @@
 {% endif %}
     {% block content%} {% endblock %}
    
-    <!-- <script src="script.js"></script> -->
+    <script src="{% static 'js/script.js' %}"></script>
   </body>
 </html>
 
