--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,8 @@
+{% load static %}
 <header class="header header--loggedIn">
     <div class="container">
       <a href="{% url 'home' %}" class="header__logo">
-        <img src="assets/logo.svg" />
+        <img src="{% static 'assets/logo.svg' %}" />
         <h1>StudyBuddy</h1>
       </a>
       <form class="header__search" method="get" action="{% url 'home'%}">
@@ -16,12 +17,10 @@
           <input type="text" name="query"  placeholder="Search for rooms..." />
         </label>
       </form>
+
+
       <nav class="header__menu">
-        <!-- Not Logged In -->
-        <!-- <a href="/login.html">
-          <img src="./assets/avatar.svg" />
-          <p>Login</p>
-        </a> -->
+        
 
         <!-- Logged In -->
 
@@ -32,15 +31,7 @@
               <img src="https://randomuser.me/api/portraits/men/37.jpg" />
             </div>
             <p>{{ request.user.username }} <span>@{{ request.user.username }} </span></p>
-          </a>
-          {% endif %}
-          <button class="dropdown-button">
-            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
-              <title>chevron-down</title>
-              <path d="M16 21l-13-13h-3l16 16 16-16h-3l-13 13z"></path>
-            </svg>
-          </button>
-        </div>
+        </a>
 
         <div class="dropdown-menu">
           <a href="settings.html" class="dropdown-link"
@@ -52,7 +43,7 @@
             </svg>
             Settings</a
           >
-          <a href="login.html" class="dropdown-link"
+          <a href="{% url 'logout_user' %}" class="dropdown-link"
             ><svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
               <title>sign-out</title>
               <path
@@ -65,16 +56,22 @@
             Logout</a
           >
         </div>
+        {% else %}
+        <a href="{% url 'login' %}" >Login</a>
+        {% endif %}
+          <!-- <button class="dropdown-button">
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+              <title>chevron-down</title>
+              <path d="M16 21l-13-13h-3l16 16 16-16h-3l-13 13z"></path>
+            </svg>
+          </button> -->
+        </div>
+    
+
       </nav>
     </div>
   </header>
 
-{% if request.user.is_authenticated %}
-<p>Hello {{ request.user }}</p>
-<a href="{% url 'logout_user' %}">Logout</a>
-{% else %}
-<a href="{% url 'login' %}">Login</a>
-{% endif %}
 
 <hr />
 
